----------------------------------
[2009-11-28 Ver 0.58 -> 0.59]
- modified 'Wizin_Util_Web::getFileByHttp' and 'Wizin_Util_Web::getContentsByHttp', change default value for send referer.
----------------------------------
[2009-11-28 Ver 0.57 -> 0.58]
- added logic into Wizin_Plugin_User_Mobile, check file time and download new spec file.
- modified 'Wizin_Util_Web::getFileByHttp', add flag for send referer.
----------------------------------
[2009-11-20 Ver 0.56 -> 0.57]
- replace '&' string for mobile link discovery.(thx jidaikobo)
----------------------------------
[2009-11-09 Ver 0.55 -> 0.56]
- Fixed bug about width value in spec data is empty, resize image width will be 0px.(thx pik)
----------------------------------
[2009-11-01 Ver 0.54 -> 0.55]
- Fixed bug about raised exception by PEAR when empty value exists in link tag.(thx hiro1613)
- Patched for css content is not string.
----------------------------------
[2009-10-11 Ver 0.53 -> 0.54]
- Fixed bug about session id exists in link tag for Mobile Link Discovery.
- Fixed bug about encoding salt exists in bottom of contents.(thx Vane)
----------------------------------
[2009-09-20 Ver 0.52 -> 0.53]
- Deleted constant 'WIZIN_SALT'.
- Deleted method 'Wizin_Util::salt' and Added method 'Wizin::salt'.
- Modified mobile plugins, delete empty method.
- Modified mobile plugins, call parent::_require().
- Modified mobile plugin, call method that check location header.
- Added logic into Wizin_Crypt, create iv from salt and filepath.
----------------------------------
[2009-09-18 Ver 0.51 -> 0.52]
- Removed 'PEAR::Mail'.
- Added 'Qdmail'.
- Added 'PEAR::Crypt_Blowfish'.
- Renamed trans_sid filter, and modified logic for external links.
- Modified function args type.
- Added method 'fprefix' into Wizin_Util.
- Fixed some notice messages in Wizin_User.
----------------------------------
[2009-09-15 Ver 0.50 -> 0.51]
- Added functions for get header info.
- Added image resize logic for uploaded file.